--- a/src/theme/DefaultButton/style.css
+++ b/src/theme/DefaultButton/style.css
@@ -35,7 +35,7 @@
 
 [data-theme="dark"] .default:hover {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    #86f2dd;
+    #48dcbc;
   color: #102432;
 }
 
