--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -45,7 +45,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #86f2dd;
+  --ifm-color-primary: #48dcbc;
   --ifm-color-primary-dark: #4bb1ec;
   --ifm-color-primary-darker: #0098ef;
   --ifm-color-primary-darkest: #0175b8;
@@ -91,11 +91,11 @@ html[data-theme="dark"] {
   --ifm-color-content: #e3e3e3;
   --ifm-color-content-secondary: #fff;
   --ifm-link-color: #48dcbc;
-  --ifm-tabs-color-active-border: #86f2dd;
-  --ifm-tabs-color-active: #86f2dd;
+  --ifm-tabs-color-active-border: #48dcbc;
+  --ifm-tabs-color-active: #48dcbc;
   --ifm-code-background: #fafafa28;
-  --ifm-breadcrumb-color-active: #86f2dd;
-  --ifm-menu-color-active: #86f2dd;
+  --ifm-breadcrumb-color-active: #48dcbc;
+  --ifm-menu-color-active: #48dcbc;
   --ifm-menu-color: #9da1a6;
   --docusaurus-collapse-button-bg: #091720 !important;
   --ifm-toc-border-color: #001f2b;
