--- a/src/theme/OutlinedCard/styles.module.css
+++ b/src/theme/OutlinedCard/styles.module.css
@@ -91,7 +91,6 @@ p.cardLink {
 }
 
 p.cardLink:hover {
-  color: var(--ifm-button-color);
   border-bottom: 1px dotted #95adee88;
 }
 
@@ -103,16 +102,8 @@ div.flexBox {
   justify-content: left;
 }
 
-p.cardLink:hover .externalArrowIcon path {
-  stroke: var(--ifm-menu-color-active);
-}
-
-[data-theme="dark"] .externalArrowIcon path {
-  stroke: #48dcbc;
-}
-
-[data-theme="dark"] p.cardLink:hover .externalArrowIcon path {
-  stroke: var(--ifm-menu-color-active);
+p.cardLink .externalArrowIcon path {
+  stroke: var(--ifm-color-primary);
 }
 
 p.cardLink:hover .rightArrowIcon path:nth-child(2) {
