--- a/src/theme/SectionGrid/styles.module.css
+++ b/src/theme/SectionGrid/styles.module.css
@@ -57,49 +57,45 @@
   gap: 1rem;
 }
 
+[data-theme="dark"] .iconContainer {
+  --tw-box-shadow: 1px 1px 2px 0 rgb(184, 196, 201, 0.05);
+}
+[data-theme="dark"] .iconContainer:hover {
+  --tw-box-shadow: 1px 1px 2px 0 rgb(184, 196, 201, 0.1);
+}
+
 .iconContainer {
   display: flex;
   align-items: center;
-  padding-left: 0.8rem;
-  border-radius: 0.75rem;
-  border-width: 1px;
-  border-color: #f3f4f6;
   color: var(--ifm-font-color-base);
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  --tw-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
 
 .iconContainer:hover {
+  --tw-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+
   --tw-ring-inset: ;
   --tw-ring-offset-width: 0px;
   --tw-ring-opacity: 1;
   --tw-ring-offset-color: #fff;
-
+  text-decoration: none;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-
-  text-decoration: none;
-  border-color: #e5e7eb;
-  box-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   --ring-color: #e5e7eb;
 }
 
-.iconBox {
-  display: inline-block;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  background-color: #f9fafb;
-}
-
 .icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 2.3rem;
+  height: 2.3rem;
+  padding: 0.2rem;
+  border-width: 1px;
+  border-color: #f3f4f6;
+  box-shadow: var(--tw-box-shadow);
 }
 
 .iconHeader {
-  margin: 0.5rem 1rem;
-  font-weight: 700;
+  margin: 0.5rem 0.5rem;
 }
 
 @media (min-width: 640px) {
