--- a/src/theme/SectionGrid/styles.module.css
+++ b/src/theme/SectionGrid/styles.module.css
@@ -59,6 +59,7 @@
 
 .iconContainer {
   display: flex;
+  width: 100%;
   align-items: center;
   color: var(--ifm-font-color-base);
   --icon-border-color: #e0e0e0;
@@ -76,7 +77,6 @@
   text-decoration: none;
 
   --icon-border-color: #0098ef;
-  --tw-box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
 
   --tw-ring-inset: ;
   --tw-ring-offset-width: 0px;
@@ -93,12 +93,12 @@
   height: 2.3rem;
   padding: 0.2rem;
 
-  border-radius: 2px;
-  border: 2px solid var(--icon-border-color);
+  border-radius: 6px;
+  border: 1px solid var(--icon-border-color);
 }
 
 .icon:hover {
-  border: 2px solid var(--icon-border-color);
+  border: 1px solid var(--icon-border-color);
 }
 
 .iconHeader {
