--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -241,6 +241,7 @@ h3 {
 .DocSearch.DocSearch-Button {
   --docsearch-primary-color: var(--ifm-color-primary-darkest) !important;
 
+  height: 32px;
   border: 1px solid #bec3c9;
   border-radius: 0;
   padding: 0 1rem;
