--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -518,6 +518,20 @@ table tr:first-child {
   font-weight: normal;
 }
 
+/* custom github icon */
+
+.header-github-link {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  padding: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0.2rem;
+}
+
 [data-theme="dark"] .header-github-link:before {
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='rgb(204 208 213)' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5' /%3E%3C/svg%3E")
     no-repeat;
@@ -530,10 +544,20 @@ table tr:first-child {
   display: flex;
   height: 24px;
   width: 24px;
+
+  transition: background var(--ifm-transition-fast);
+  -webkit-tap-highlight-color: transparent;
 }
 
-/* hide the version dropdown */
-html.plugin-id-cloud .header-drop-down,
-html.mdx-page .header-drop-down {
+/* hide the version dropdown on cloud and home page */
+html.plugin-id-cloud .dropdown--right,
+html.mdx-page .dropdown--right,
+html.plugin-id-cloud .menu__list-item--collapsed:has(.header-drop-down),
+html.mdx-page .menu__list-item--collapsed:has(.header-drop-down) {
   display: none;
+}
+
+.header-github-link:hover {
+  --ifm-color-emphasis-200: var(--ifm-color-gray-800);
+  background: var(--ifm-color-emphasis-200);
 }
