--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -521,6 +521,7 @@ table tr:first-child {
 /* custom github icon */
 
 .header-github-link {
+  list-style-type: none;
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
