feat: use web font with swap

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,13 +28,13 @@
   --ifm-code-font-size: 90%;
   --ifm-font-size-base: 92%;
   --ifm-z-index-fixed: 200;
-  --ifm-font-family-base: Roboto, sans-serif;
-  --ifm-font-family-button: Roboto, sans-serif;
+  --ifm-font-family-base: "Roboto", sans-serif;
+  --ifm-font-family-button: "Roboto", sans-serif;
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
-  --ifm-font-family-monospace: RobotoMono, SFMono-Regular, Menlo, Monaco,
-    Consolas, "Liberation Mono", "Courier New", monospace;
+  --ifm-font-family-monospace: "Roboto Mono", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
+    monospace;
 
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
@@ -56,12 +56,7 @@
   --ifm-navbar-link-color: #e3e3e3;
   --ifm-heading-color: #e3e3e3;
 
-  --ifm-button-background-color: linear-gradient(
-      0deg,
-      rgba(72, 220, 188, 0.1),
-      rgba(72, 220, 188, 0.1)
-    ),
-    #0a3246;
+  --ifm-button-background-color: linear-gradient(0deg, rgba(72, 220, 188, 0.1), rgba(72, 220, 188, 0.1)), #0a3246;
   --ifm-button-hover-background-color: #102432;
   --ifm-button-color: #48dcbc;
 
@@ -112,7 +107,6 @@ html[data-theme="dark"] {
 .theme-doc-sidebar-item-category-level-1 > div > a,
 .theme-doc-sidebar-item-category-level-1 > div > a:hover {
   color: var(--ifm-color-emphasis-700);
-  font-family: Roboto-Medium;
   padding-top: 1.4rem;
 }
 
@@ -149,6 +143,10 @@ html[data-theme="dark"] {
   flex: 0 0 100%;
   align-items: center;
   margin: 0 auto;
+}
+
+.navbar__link {
+  font-weight: 400;
 }
 
 .navbar--fixed-top {
@@ -191,13 +189,13 @@ html[data-theme="dark"] {
 }
 
 h1 {
-  font-family: Roboto-Light !important;
+  font-family: Roboto;
   letter-spacing: -0.01em;
   font-weight: 300;
 }
 
 h2 {
-  font-weight: 300;
+  font-weight: 400;
   padding-bottom: 10px;
   border-bottom: 1px solid var(--ifm-color-neutral-900);
 }
@@ -207,7 +205,7 @@ h2 {
 }
 
 h3 {
-  font-weight: 200;
+  font-weight: 400;
 }
 
 /* Custom Ordered List  */
@@ -226,10 +224,7 @@ h3 {
   margin-left: 1.5rem;
 }
 
-.theme-doc-markdown
-  ol
-  li:not(.tabs__item)
-  > :first-child:not(code, strong)::before {
+.theme-doc-markdown ol li:not(.tabs__item) > :first-child:not(code, strong)::before {
   font-size: 0.75rem;
   font-weight: bold;
   counter-increment: circle-counter;
@@ -252,6 +247,10 @@ h3 {
   border: 2px solid;
 }
 
+.DocSearch-Hit-content-wrapper {
+  font-weight: 400 !important;
+}
+
 /* Custom Unordered List */
 .theme-doc-markdown ul li:not(.tabs__item)::marker {
   color: #909090;
@@ -269,8 +268,11 @@ h3 {
 
 .theme-doc-sidebar-menu > .theme-doc-sidebar-item-link-level-1 a {
   color: var(--ifm-color-emphasis-700);
-  font-family: Roboto-Medium;
   padding-top: 1.4rem;
+}
+
+.menu__list > .theme-doc-sidebar-item-category ul a {
+  font-weight: 400;
 }
 
 .docusaurus-highlight-code-line {
