--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,76 +1,1 @@
-/* Roboto */
-@font-face {
-  font-family: Roboto;
-  src: url(/static/font/Roboto/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: Roboto-Black;
-  src: url(/static/font/Roboto/Roboto-Black.ttf);
-}
-
-@font-face {
-  font-family: Roboto-Light;
-  src: url(/static/font/Roboto/Roboto-Light.ttf);
-}
-
-@font-face {
-  font-family: Roboto-Medium;
-  src: url(/static/font/Roboto/Roboto-Medium.ttf);
-}
-
-@font-face {
-  font-family: Roboto-Thin;
-  src: url(/static/font/Roboto/Roboto-Thin.ttf);
-}
-
-@font-face {
-  font-family: Roboto-Bold;
-  src: url(/static/font/Roboto/Roboto-Bold.ttf);
-}
-
-@font-face {
-  font-family: Roboto-Italic;
-  src: url(/static/font/Roboto/Roboto-Italic.ttf);
-}
-
-/* Roboto Mono */
-@font-face {
-  font-family: RobotoMono;
-  src: url(/static/font/RobotoMono/RobotoMono-Regular.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-ExtraLight;
-  src: url(/static/font/RobotoMono/RobotoMono-ExtraLight.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-Light;
-  src: url(/static/font/RobotoMono/RobotoMono-Light.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-Medium;
-  src: url(/static/font/RobotoMono/RobotoMono-Medium.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-Thin;
-  src: url(/static/font/RobotoMono/RobotoMono-Thin.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-Bold;
-  src: url(/static/font/RobotoMono/RobotoMono-Bold.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-SemiBold;
-  src: url(/static/font/RobotoMono/RobotoMono-SemiBold.ttf);
-}
-
-@font-face {
-  font-family: RobotoMono-Italic;
-  src: url(/static/font/RobotoMono/RobotoMono-Italic.ttf);
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@300;400;500&display=swap");
