--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -41,6 +41,8 @@
   --ifm-navbar-height: 3rem;
 
   --ifm-docs-page-width-xl: 1280px;
+
+  --ifm-card-content-color: var(--ifm-font-color-base);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -97,6 +99,7 @@ html[data-theme="dark"] {
 
   --ifm-card-background-color: #081f29;
   --ifm-card-border-color: #152c3c;
+  --ifm-card-content-color: #fff;
 }
 
 /* custom sidebar menu */
