feat: icon chatbot

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -522,3 +522,24 @@ table tr:first-child {
 .pagination-nav__label {
   font-weight: normal;
 }
+
+@keyframes inAnimation {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes outAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
