feat: border for images on the docs

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -523,3 +523,9 @@ table tr:first-child {
 html.mdx-page h2 {
   --ifm-heading-margin-top: 2rem;
 }
+
+.medium-zoom-image {
+  border: 1px solid #ccc;
+  border-radius: 18px;
+  padding: 4px;
+}
